--- a/src/iBlogs.Site.Web/Views/Install/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Install/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model ViewBaseModel
+﻿@using iBlogs.Site.Application
+@using Microsoft.Extensions.Configuration
+@model ViewBaseModel
+@inject IConfiguration Configuration
 <!DOCTYPE html>
 <html>
 <head>
@@ -140,7 +143,7 @@
         }
         else
         {
-        <h5>你已经安装过Tale了，如需重新安装请提前做好备份，并删除根目录下的<mark>iBlogs.db</mark>文件。</h5>
+        <h5>你已经安装过Tale了，如需重新安装请提前做好备份，并删除根目录下的<mark>@Configuration[ConfigKey.SqLiteDbFileName]</mark>文件。</h5>
         }
 
     </div>
