--- a/src/iBlogs.Site.Web/Views/Install/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Install/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using iBlogs.Site.Application
+﻿@using iBlogs.Site.Core
 @using Microsoft.Extensions.Configuration
 @model ViewBaseModel
 @inject IConfiguration Configuration
