--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -1,5 +1,5 @@
-﻿@using iBlogs.Site.Application.Extensions
-@using iBlogs.Site.Application.Service.Common
+﻿@using iBlogs.Site.Core.Extensions
+@using iBlogs.Site.Core.Service.Common
 @inject IViewService ViewService
 <!DOCTYPE html>
 <html>
