--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -84,8 +84,6 @@
                     <a class="social zhihu" target="blank" href="https://www.zhihu.com/people/@ViewService.theme_option("social_zhihu")">知乎</a>
                     }
 
-
-
                     <a class="social rss" target="blank" href="/feed">RSS</a>
 
                     @if (!ViewService.theme_option("social_github").IsNullOrWhiteSpace())
@@ -120,7 +118,7 @@
 
                 <div class="meta-item meta-posts">
                     <h3 class="meta-title">最新文章</h3>
-                    需要去做
+                    TODO
                     <li>
                         <a href="@ViewService.permalink()">@ViewService.Title()</a>
                     </li>
