--- a/src/iBlogs.Site.Web/Views/Index/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/Index.cshtml
@@ -3,6 +3,7 @@
 @using iBlogs.Site.Core.Service.Content
 @inject IViewService ViewService
 @inject IContentsService ContentsService
+@model ViewBaseModel
 <div class="main-content index-page clearfix">
     <div class="post-lists">
         <div class="post-lists-body">
@@ -26,7 +27,7 @@
                                 <div class="item-meta-ico @ViewService.show_icon()"
                                      style="background: url(/templates/themes/default/static/img/bg-ico.png) no-repeat;background-size: 40px auto;"></div>
                                 <div class="item-meta-cat">
-                                    @ViewService.show_categories()
+                                    @Html.Raw(ViewService.show_categories())
                                 </div>
                             </div>
                         </div>
@@ -36,6 +37,24 @@
         </div>
     </div>
     <div class="lists-navigator clearfix">
-        #call pageNav(articles(12),'←','→','page')
+        @{ var pageInfo = ContentsService.findArticles(new ArticleParam());
+            <ol class="page-navigator">
+                @if (pageInfo.hasPrevPage)
+                {
+                    <li class="prev"><a href="/page/@pageInfo.prevPage">←</a></li>
+                }
+
+                @foreach (var navIndex in pageInfo.navPageNums)
+                {
+                    <li class="@(pageInfo.pageNum==Model.navIndex?"current":"")"><a href="/page/@navIndex">@navIndex</a></li>
+                }
+
+                @if (pageInfo.hasNextPage)
+                {
+                    <li class="next"><a href="/page/@pageInfo.nextPage">→</a></li>
+                }
+            </ol>
+        }
+
     </div>
 </div>
